<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_gifs"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gif_title" />
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/video_title" />

    </group>

    <item android:title="@string/advance_category">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/action_settings" />
        </menu>
    </item>

</menu>
